--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -150,13 +150,13 @@
       "WEEK": "Week"
     },
     "ATTACHMENTS": {
-      "TAP_TO_ADD_ATTACHMENT": "Tap to add an attachment...",
       "ERROR_OPENING_ATTACHMENT": "Error while opening the attachment",
       "ERROR_UPLOADING_ATTACHMENT": "Error while uploading the attachment",
       "HIDE_ERROR": "Hide the error",
       "NO_ATTACHMENT": "No attachment",
       "NO_NAME": "No name",
       "REMOVE_ATTACHMENT": "Remove the attachment",
+      "TAP_TO_ADD_ATTACHMENT": "Tap to add an attachment...",
       "UPLOADING": "Uploading...",
       "UPLOADING_ATTACHMENT_WARNING": "Loading the attachment, don't change page"
     },
@@ -255,6 +255,13 @@
       "PHONE_HINT": "Phone/cellphone number"
     },
     "CUSTOM_FIELDS": {
+      "ADD_FIELD": "Add a field",
+      "ADD_FIELD_HINT": "Choose a name for the new field",
+      "ADD_OPTION": "Add a choice",
+      "ADD_OPTION_HINT": "Add an option so that the user will be able to choose it to fill out the field",
+      "ADD_ROW": "Add a row",
+      "ADD_SECTION": "Add a section",
+      "ADD_SECTION_HINT": "Choose a name for the new section",
       "CHOICES": "Possible choices",
       "CHOOSE_A_KEY": "Choose a name for the field",
       "CLOSE_WITHOUT_SAVING": "Close without saving",
@@ -262,8 +269,9 @@
       "DEFAULT_HINT": "The value to assume by default",
       "DESCRIPTION": "Description",
       "DESCRIPTION_HINT": "Description of how the field should be filled out",
+      "DISPLAY_TEMPLATE": "Print layout",
+      "DISPLAY_TEMPLATE_I": "Customize the layout of the section in the PDF report. Manage multiple rows and add up to three fields inside of each them, in the order you prefer. If a field isn't in the layout, it won't be displayed in the PDF report. Empty rows will be ignored.",
       "DUPLICATED_KEY": "A field with that name already exists",
-      "OPTIONS": "Possible choices",
       "FIELDS_TYPES": {
         "BOOLEAN": "Yes / No",
         "ENUM": "Choice",
@@ -272,7 +280,10 @@
         "TEXT": "Long text"
       },
       "FIELD_DELETION_ALERT": "The field will be irreversibly deleted",
+      "ICON": "Icon",
+      "ICON_HINT": "Icon to visually recognize the field",
       "MANAGE_FIELD": "Manage field",
+      "MANAGE_SECTION": "Manage section",
       "MAX": "Maximum",
       "MAX_HINT": "The highest value the field can have",
       "MIN": "Minimum",
@@ -280,28 +291,17 @@
       "NAME": "Name",
       "NAME_HINT": "A name to recognize the field and understand its purpose",
       "NEW_FIELD": "New field",
-      "OBLIGATORY": "Obligatory",
-      "REMOVE_FIELD": "Remove the field",
-      "TYPE": "Type",
-      "SAVE_CHANGES": "Save changes",
-      "ICON": "Icon",
-      "ICON_HINT": "Icon to visually recognize the field",
-      "ADD_OPTION": "Add a choice",
-      "ADD_OPTION_HINT": "Add an option so that the user will be able to choose it to fill out the field",
-      "REMOVE_OPTION": "Remove the choice",
-      "ADD_SECTION": "Add a section",
-      "ADD_SECTION_HINT": "Choose a name for the new section",
-      "MANAGE_SECTION": "Manage section",
-      "ADD_FIELD": "Add a field",
-      "ADD_FIELD_HINT": "Choose a name for the new field",
       "NO_ELEMENTS": "No elements",
+      "OBLIGATORY": "Obligatory",
+      "OPTIONS": "Possible choices",
+      "REMOVE_FIELD": "Remove the field",
+      "REMOVE_OPTION": "Remove the choice",
+      "ROW": "Row",
+      "SAVE_CHANGES": "Save changes",
+      "SECTION_DESCRIPTION_HINT": "Briefly describe the purpose of the section",
       "SECTION_FIELDS": "Section fields",
       "SECTION_NAME_HINT": "The name to identify the section",
-      "SECTION_DESCRIPTION_HINT": "Briefly describe the purpose of the section",
-      "DISPLAY_TEMPLATE": "Print layout",
-      "DISPLAY_TEMPLATE_I": "Customize the layout of the section in the PDF report. Manage multiple rows and add up to three fields inside of each them, in the order you prefer. If a field isn't in the layout, it won't be displayed in the PDF report. Empty rows will be ignored.",
-      "ADD_ROW": "Add a row",
-      "ROW": "Row"
+      "TYPE": "Type"
     },
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tap to download the file" },
     "DURATION": { "HH": "hh", "HOURS": "Hours", "MINUTES": "Minutes", "MM": "mm", "SECONDS": "Seconds", "SS": "ss" },
@@ -320,20 +320,20 @@
       "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copy and paste the following token in the previous page to complete the configuration: {{token}}"
     },
     "EMAIL": {
-      "EMAIL_DATA": "Email data",
-      "TO": "To",
-      "CC": "Cc",
-      "BCC": "Bbc",
-      "SUBJECT": "Subject",
-      "CONTENT": "Content",
-      "VARIABLES_AVAILABLE": "Variables available",
-      "VARIABLES_AVAILABLE_I": "These are all the variables you can use in subject and content. When sending an email they will be substitute by their values.",
       "ATTACHMENTS": "Attachments",
-      "SEND_EMAIL": "Send email",
-      "NO_ADDRESSES": "No addresses",
-      "NO_ATTACHMENTS": "No attachments",
+      "BCC": "Bbc",
+      "CC": "Cc",
       "CHOOSE_OR_ADD_AN_ADDRESS": "Choose or add an email address",
-      "NO_ADDRESS_FOUND_YOU_CAN_ADD_ONE": "No address found; type to add one"
+      "CONTENT": "Content",
+      "EMAIL_DATA": "Email data",
+      "NO_ADDRESSES": "No addresses",
+      "NO_ADDRESS_FOUND_YOU_CAN_ADD_ONE": "No address found; type to add one",
+      "NO_ATTACHMENTS": "No attachments",
+      "SEND_EMAIL": "Send email",
+      "SUBJECT": "Subject",
+      "TO": "To",
+      "VARIABLES_AVAILABLE": "Variables available",
+      "VARIABLES_AVAILABLE_I": "These are all the variables you can use in subject and content. When sending an email they will be substitute by their values."
     },
     "LABELER": {
       "EXPLANATION": "Only the translation in the default language is mandatory. If any translation is missing, the one in the default language is used instead.",
@@ -350,8 +350,8 @@
       "ELEMENT": "Element",
       "NEW_ELEMENT": "New element",
       "NO_ELEMENTS_FOUND": "No elements found",
-      "SAVE_AND_CLOSE": "Save and close",
-      "NUM_ELEMENTS_": "{{num}} elements in the list"
+      "NUM_ELEMENTS_": "{{num}} elements in the list",
+      "SAVE_AND_CLOSE": "Save and close"
     },
     "LOADING": { "PLEASE_WAIT": "Please wait..." },
     "MDE": {
@@ -362,15 +362,19 @@
       "VARIABLES": "Variables"
     },
     "OFFLINE": {
+      "ADVANCED_ACTIONS": "Advanced actions",
       "DELETION_IS_IRREVERSIBLE": "The deletion is irreversible",
+      "DONT_EXIT_APP_DISCLAIMER": "Please, don't exit the app while synchronising",
       "DOWNLOAD": "Download",
       "DOWNLOAD_RESOURCES_EXPLANATION": "List of the resources available offline",
       "ERROR_DURING_LAST_SYNC": "There was an error during the last synchronisation; please try again.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Functionality is reduced and contents may be not up to date",
       "FORCE_FULL_SYNC": "Force full synchronisation",
+      "FULL_SYNC_DISCLAIMER": "All the offline data will be removed and the operation could take several minutes",
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "There is a lot of data to synchronise. Confirm to proceed.",
       "LAST_SYNC": "Last synchronisation",
       "LOADING": "Loading...",
+      "NEVER": "Never",
       "NOW": "Now",
       "NO_ELEMENTS_TO_UPLOAD": "No elements to upload",
       "OFFLINE_MANAGER": "Offline manager",
@@ -379,22 +383,18 @@
       "SYNC_NOW": "Sync",
       "UPLOAD": "Upload",
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Resources created offline must be uploaded online",
-      "YOU_ARE_OFFLINE": "You are offline",
-      "NEVER": "Never",
-      "ADVANCED_ACTIONS": "Advanced actions",
-      "FULL_SYNC_DISCLAIMER": "All the offline data will be removed and the operation could take several minutes",
-      "DONT_EXIT_APP_DISCLAIMER": "Please, don't exit the app while synchronising"
+      "YOU_ARE_OFFLINE": "You are offline"
     },
     "RESOURCE_CENTER": {
-      "RESOURCES_AVAILABLE": "Resources available",
-      "TAP_TO_ADD_A_RESOURCE": "Tap to add a resource...",
       "ERROR_OPENING_RESOURCE": "Error while opening the resource",
       "NO_FOLDER_SELECTED": "No folder selected",
       "NO_NAME": "No name",
       "NO_RESOURCES": "No resources",
       "OPEN_OLD_VERSION": "Open old version",
       "REMOVE_RESOURCE": "Remove the resource",
+      "RESOURCES_AVAILABLE": "Resources available",
       "SELECT_FOLDER": "Select a folder",
+      "TAP_TO_ADD_A_RESOURCE": "Tap to add a resource...",
       "VERSION_ATTACHED_IS_OLDER": "The resource has been updated since it was attached"
     },
     "SELECT": {
@@ -407,14 +407,14 @@
     },
     "SIGNATURE": {
       "CANCEL": "Cancel",
+      "CHOOSE_FROM_CONTACTS": "Scegli dai contatti",
       "CLEAR_SIGNATURE": "Clear the signature",
       "NAME_AND_SURNAME": "Name and surname",
       "SAVE_SIGNATURE": "Save the signature",
       "SIGNATORY": "Signatory",
       "SIGNATURE": "Signature",
       "SIGNATURE_EXPLANATION": "Draw the signature here below",
-      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verify signatory and signature",
-      "CHOOSE_FROM_CONTACTS": "Scegli dai contatti"
+      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verify signatory and signature"
     },
     "STRIPE": {
       "AUTHORIZATION_CHECK_TEXT": "to send instructions to the financial institution that issued my card to take payments from my card account in accordance with the terms of the service.",
