--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -150,13 +150,13 @@
       "WEEK": "Settimana"
     },
     "ATTACHMENTS": {
-      "TAP_TO_ADD_ATTACHMENT": "Tocca per aggiungere un allegato...",
       "ERROR_OPENING_ATTACHMENT": "Errore nell'apertura dell'allegato",
       "ERROR_UPLOADING_ATTACHMENT": "Errore nel caricamento dell'allegato",
       "HIDE_ERROR": "Nascondi l'errore",
       "NO_ATTACHMENT": "Nessun allegato",
       "NO_NAME": "Senza nome",
       "REMOVE_ATTACHMENT": "Rimuovi l'allegato",
+      "TAP_TO_ADD_ATTACHMENT": "Tocca per aggiungere un allegato...",
       "UPLOADING": "Caricamento...",
       "UPLOADING_ATTACHMENT_WARNING": "Caricando l'allegato, non cambiare pagina"
     },
@@ -255,6 +255,13 @@
       "PHONE_HINT": "Numero di telefono/cellulare"
     },
     "CUSTOM_FIELDS": {
+      "ADD_FIELD": "Aggiungi un campo",
+      "ADD_FIELD_HINT": "Scegli un nome per il nuovo campo",
+      "ADD_OPTION": "Aggiungi una scelta",
+      "ADD_OPTION_HINT": "Aggiungi un'opzione così che l'utente possa sceglierla per compilare il campo",
+      "ADD_ROW": "Aggiungi una riga",
+      "ADD_SECTION": "Aggiungi una sezione",
+      "ADD_SECTION_HINT": "Scegli un nome per la nuova sezione",
       "CHOICES": "Scelte possibili",
       "CHOOSE_A_KEY": "Scegli un nome per il campo",
       "CLOSE_WITHOUT_SAVING": "Chiudi senza salvare",
@@ -262,8 +269,9 @@
       "DEFAULT_HINT": "Il valore da assumere come predefinito",
       "DESCRIPTION": "Descrizione",
       "DESCRIPTION_HINT": "Descrizione di come il campo dovrebbe essere compilato",
+      "DISPLAY_TEMPLATE": "Layout di stampa",
+      "DISPLAY_TEMPLATE_I": "Personalizza il layout della sezione nei report PDF. Gestisci multiple righe e disponi un massimo di tre campi in ognuna, nell'ordine che preferisci. Se un campo non è nel layout, non verrà mostrato nel report PDF. Righe vuote verranno ignorate.",
       "DUPLICATED_KEY": "Esiste già  un campo con quel nome",
-      "OPTIONS": "Scelte possibili",
       "FIELDS_TYPES": {
         "BOOLEAN": "Si / No",
         "ENUM": "Scelta",
@@ -272,7 +280,10 @@
         "TEXT": "Note"
       },
       "FIELD_DELETION_ALERT": "Il campo verrà rimosso irrimediabilmente",
+      "ICON": "Icona",
+      "ICON_HINT": "Icona con cui riconoscere visivamente il campo",
       "MANAGE_FIELD": "Gestisci campo",
+      "MANAGE_SECTION": "Gestisci sezione",
       "MAX": "Massimo",
       "MAX_HINT": "Il massimo valore che può avere il campo",
       "MIN": "Minimo",
@@ -280,28 +291,17 @@
       "NAME": "Nome",
       "NAME_HINT": "Un nome per riconoscere il campo e capirne lo scopo",
       "NEW_FIELD": "Nuovo campo",
-      "OBLIGATORY": "Obbligatorio",
-      "REMOVE_FIELD": "Rimuovi il campo",
-      "TYPE": "Tipo",
-      "SAVE_CHANGES": "Salva i cambiamenti",
-      "ICON": "Icona",
-      "ICON_HINT": "Icona con cui riconoscere visivamente il campo",
-      "ADD_OPTION": "Aggiungi una scelta",
-      "ADD_OPTION_HINT": "Aggiungi un'opzione così che l'utente possa sceglierla per compilare il campo",
-      "REMOVE_OPTION": "Rimuovi la scelta",
-      "ADD_SECTION": "Aggiungi una sezione",
-      "ADD_SECTION_HINT": "Scegli un nome per la nuova sezione",
-      "MANAGE_SECTION": "Gestisci sezione",
-      "ADD_FIELD": "Aggiungi un campo",
-      "ADD_FIELD_HINT": "Scegli un nome per il nuovo campo",
       "NO_ELEMENTS": "Nessun elemento",
+      "OBLIGATORY": "Obbligatorio",
+      "OPTIONS": "Scelte possibili",
+      "REMOVE_FIELD": "Rimuovi il campo",
+      "REMOVE_OPTION": "Rimuovi la scelta",
+      "ROW": "Riga",
+      "SAVE_CHANGES": "Salva i cambiamenti",
+      "SECTION_DESCRIPTION_HINT": "Descrivi brevemente lo scopo della sezione",
       "SECTION_FIELDS": "Campi della sezione",
       "SECTION_NAME_HINT": "Il nome per identificare la sezione",
-      "SECTION_DESCRIPTION_HINT": "Descrivi brevemente lo scopo della sezione",
-      "DISPLAY_TEMPLATE": "Layout di stampa",
-      "DISPLAY_TEMPLATE_I": "Personalizza il layout della sezione nei report PDF. Gestisci multiple righe e disponi un massimo di tre campi in ognuna, nell'ordine che preferisci. Se un campo non è nel layout, non verrà mostrato nel report PDF. Righe vuote verranno ignorate.",
-      "ADD_ROW": "Aggiungi una riga",
-      "ROW": "Riga"
+      "TYPE": "Tipo"
     },
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tocca per scaricare il file" },
     "DURATION": { "HH": "ore", "HOURS": "Ore", "MINUTES": "Minuti", "MM": "min", "SECONDS": "Secondi", "SS": "sec" },
@@ -320,20 +320,20 @@
       "TRELLO_SOURCE_INTEGRATION_SUCCESS": "Copia e incolla il seguente token nella schermata precedente per completare la configurazione: {{token}}"
     },
     "EMAIL": {
-      "EMAIL_DATA": "Dati email",
-      "TO": "A",
-      "CC": "Cc",
-      "BCC": "Ccn",
-      "SUBJECT": "Oggetto",
-      "CONTENT": "Contenuto",
-      "VARIABLES_AVAILABLE": "Variabili disponibili",
-      "VARIABLES_AVAILABLE_I": "Queste sono le variabili che puoi usare in oggetto e contenuto dell'email. All'invio di un'email verranno sostituite dai loro valori.",
       "ATTACHMENTS": "Allegati",
-      "SEND_EMAIL": "Invio email",
-      "NO_ADDRESSES": "Nessun indirizzo",
-      "NO_ATTACHMENTS": "Nessun allegato",
+      "BCC": "Ccn",
+      "CC": "Cc",
       "CHOOSE_OR_ADD_AN_ADDRESS": "Scegli o aggiungi un indirizzo email",
-      "NO_ADDRESS_FOUND_YOU_CAN_ADD_ONE": "Nessun indirizzo email trovato; puoi sempre inserirne uno manualmente"
+      "CONTENT": "Contenuto",
+      "EMAIL_DATA": "Dati email",
+      "NO_ADDRESSES": "Nessun indirizzo",
+      "NO_ADDRESS_FOUND_YOU_CAN_ADD_ONE": "Nessun indirizzo email trovato; puoi sempre inserirne uno manualmente",
+      "NO_ATTACHMENTS": "Nessun allegato",
+      "SEND_EMAIL": "Invio email",
+      "SUBJECT": "Oggetto",
+      "TO": "A",
+      "VARIABLES_AVAILABLE": "Variabili disponibili",
+      "VARIABLES_AVAILABLE_I": "Queste sono le variabili che puoi usare in oggetto e contenuto dell'email. All'invio di un'email verranno sostituite dai loro valori."
     },
     "LABELER": {
       "EXPLANATION": "Solo la traduzione nella lingua di default è obbligatoria. Se una qualsiasi traduzione è mancante, verrà usata quella nella lingua di default.",
@@ -350,8 +350,8 @@
       "ELEMENT": "Elemento",
       "NEW_ELEMENT": "Nuovo elemento",
       "NO_ELEMENTS_FOUND": "Nessun elemento trovato",
-      "SAVE_AND_CLOSE": "Salva e chiudi",
-      "NUM_ELEMENTS_": "{{num}} elementi nella lista"
+      "NUM_ELEMENTS_": "{{num}} elementi nella lista",
+      "SAVE_AND_CLOSE": "Salva e chiudi"
     },
     "LOADING": { "PLEASE_WAIT": "Attendere prego..." },
     "MDE": {
@@ -362,15 +362,19 @@
       "VARIABLES": "Variabili"
     },
     "OFFLINE": {
+      "ADVANCED_ACTIONS": "Azioni avanzate",
       "DELETION_IS_IRREVERSIBLE": "La cancellazione è irreversibile",
+      "DONT_EXIT_APP_DISCLAIMER": "Per piacere, non uscire dall'app durante la sincronizzazione",
       "DOWNLOAD": "Download",
       "DOWNLOAD_RESOURCES_EXPLANATION": "Lista delle risorse disponibili quando offline",
       "ERROR_DURING_LAST_SYNC": "Si è verificato un errore durante l'ultima sincronizzazione; per favore riprova.",
       "FEATURES_REDUCED_CONTENTS_NOT_UP_TO_DATE": "Le funzionalità  sono ridotte e i contenuti potrebbero non essere aggiornati",
       "FORCE_FULL_SYNC": "Forza sincronizzazione completa",
+      "FULL_SYNC_DISCLAIMER": "Tutti i dati offline verranno eliminati e l'operazione potrebbe richiedere diversi minuti",
       "HUGE_SYNC_NEED_MANUAL_CONFIRMATION": "Sono presenti molti dati da sincronizzare. Conferma se vuoi continuare.",
       "LAST_SYNC": "Ultima sincronizzazione",
       "LOADING": "Caricamento...",
+      "NEVER": "Mai",
       "NOW": "Adesso",
       "NO_ELEMENTS_TO_UPLOAD": "Nessun elemento da caricare",
       "OFFLINE_MANAGER": "Offline manager",
@@ -379,22 +383,18 @@
       "SYNC_NOW": "Sync",
       "UPLOAD": "Upload",
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Le azioni create offline devono essere caricate online",
-      "YOU_ARE_OFFLINE": "Sei offline",
-      "NEVER": "Mai",
-      "ADVANCED_ACTIONS": "Azioni avanzate",
-      "FULL_SYNC_DISCLAIMER": "Tutti i dati offline verranno eliminati e l'operazione potrebbe richiedere diversi minuti",
-      "DONT_EXIT_APP_DISCLAIMER": "Per piacere, non uscire dall'app durante la sincronizzazione"
+      "YOU_ARE_OFFLINE": "Sei offline"
     },
     "RESOURCE_CENTER": {
-      "RESOURCES_AVAILABLE": "Risorse disponibili",
-      "TAP_TO_ADD_A_RESOURCE": "Tocca per aggiungere una risorsa...",
       "ERROR_OPENING_RESOURCE": "Errore durante l'apertura della risorsa",
       "NO_FOLDER_SELECTED": "Nessuna cartella selezionata",
       "NO_NAME": "Senza nome",
       "NO_RESOURCES": "Nessuna risorsa",
       "OPEN_OLD_VERSION": "Apri vecchia versione",
       "REMOVE_RESOURCE": "Rimuovi la risorsa",
+      "RESOURCES_AVAILABLE": "Risorse disponibili",
       "SELECT_FOLDER": "Seleziona una cartella",
+      "TAP_TO_ADD_A_RESOURCE": "Tocca per aggiungere una risorsa...",
       "VERSION_ATTACHED_IS_OLDER": "La risorsa è stata aggiornata da quando è stata allegata"
     },
     "SELECT": {
@@ -407,14 +407,14 @@
     },
     "SIGNATURE": {
       "CANCEL": "Annulla",
+      "CHOOSE_FROM_CONTACTS": "Choose from contacts",
       "CLEAR_SIGNATURE": "Resetta la firma",
       "NAME_AND_SURNAME": "Nome e cognome",
       "SAVE_SIGNATURE": "Salva la firma",
       "SIGNATORY": "Firmatario",
       "SIGNATURE": "Firma",
       "SIGNATURE_EXPLANATION": "Disegna la firma qui sotto",
-      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma",
-      "CHOOSE_FROM_CONTACTS": "Choose from contacts"
+      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma"
     },
     "STRIPE": {
       "AUTHORIZATION_CHECK_TEXT": "ad inviare istruzioni all'istituto finanziario che ha rilasciato la mia carta per prelevare pagamenti dal mio account, in accordo con i termini del del servizio.",
