--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -348,6 +348,11 @@
       "APP_WILL_RESTART": "The app will restart",
       "CHANGE_LANGUAGE": "Change the displayed language"
     },
+    "LIMIT": {
+      "COUNTER_WILL_BE_RESET_ON_": "The counter will be reset on {{date}}",
+      "ALMOST_REACHED_LIMIT_ALERT": "You almost reached the limit for the resource **{{name}}** ({{counter}} of {{limit}}).\nGo to the **team's configuration page** for more information.",
+      "LIMIT_REACHED_ALERT": "You reached the limit for the resource **{{name}}** ({{counter}} of {{limit}}).\nGo to the **team's configuration page** for more information."
+    },
     "LIST": {
       "CANCEL_AND_CLOSE": "Cancel and close",
       "DELETE_ELEMENT": "Delete element",
@@ -438,28 +443,30 @@
     },
     "SUBSCRIPTION": {
       "BACK_TO_FREE_PLAN": "Switch back to the free plan",
-      "CALCULATION_METHOD": "The number of users is calculated by counting all the distinct users across all the teams you created.",
       "CANCEL_SUBSCRIPTION": "Cancel subscription",
+      "COULDNT_LOAD_SUBSCRIPTION": "Couldn't load the subscription.",
       "COULDNT_LOAD_PLANS": "Couldn't load the plans.",
-      "DO_YOU_CONFIRM_THE_SUBSCRIPTION_": "Do you confirm you want to subscribe to {{plan}}?",
+      "DO_YOU_CONFIRM_THE_SUBSCRIPTION_": "Do you confirm you want to subscribe to: {{plan}}?",
       "ERROR_CONTACTING_STORE": "Error contacting the store",
       "EXPIRED": "Expired",
       "FREE": "Free",
       "HOW_IT_WORKS_APPLE": "Payment will be charged to your Apple ID account at the confirmation of purchase. Subscription automatically renews unless it is cancelled at least 24 hours before the end of the current period. Your account will be charged for renewal within 24 hours prior to the end of the current period. You can manage and cancel your subscriptions by going to your account settings on the App Store after purchase.",
-      "MAIN_EXPLANATION_TEAMS": "With our free plan, you have access to all the features of Horace and you can create as many teams as you like; however, to invite more than two users to your teams, you have to choose one of the following plans.",
-      "MAIN_EXPLANATION_USERS": "With our free plan you can collect data from one source and use one custom field for your tracks;  to connect up to three sources, take advantages of three custom fields and customize your reports, subscribe to our Gold plan.",
       "MANAGE_SUBSCRIPTION": "Manage subscription",
       "NEW_SUBSCRIPTION": "New subscription",
       "NEXT_BILLING_DATE": "Next billing date",
-      "NOTE_WELL": "Note well",
-      "OPTIONS": "Options",
+      "PLANS": "Available plans",
       "PLAN_NOT_FOUND": "Plan not found",
       "RESTORE_PURCHASES": "Restore purchases",
       "STOP_SUBSCRIPTION": "Cancel subscription",
       "SUBSCRIPTION_CHANGE": "Subscription change",
       "SUBSCRIPTION_WONT_RENEW_ANYMORE": "The subscription won't be renewed after its due. Do you confirm?",
       "WONT_RENEW": "Won't renew",
-      "WONT_RENEW_AFTER": "Won't renew after"
+      "WONT_RENEW_AFTER": "Won't renew after",
+      "RENEWS_ON_": "Renews on {{date}} for {{price}}",
+      "TAP_TO_REVIEW_OR_CHANGE": "Tap to review or change your plan",
+      "NO_PLANS_AVAILABLE": "No plans available for this platform",
+      "NO_PLAN": "No plan",
+      "MANAGED_BY_": "Managed by: {{user}}"
     },
     "TEAMS": {
       "ACTIONS_ON_USER_": "Actions on {{user}}",
