Improved auth flow for new registrations

--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -179,12 +179,12 @@
       "CONFIRM_NEW_PASSWORD": "Confirm the new password",
       "CONFIRM_NEW_PASSWORD_HINT": "Confirm the chosen password and continue",
       "CONFIRM_PASSWORD_ERROR": "User not found, code not correct or password too short",
-      "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Before to log in, you have to confirm the email address you provided; check in your inbox or into the SPAM folder",
+      "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Before to log in, you have to confirm the email address you provided; check in your inbox or into the SPAM folder.",
       "CREATE_AN_ACCOUNT": "Create a new account",
       "CREATE_AN_ACCOUNT_HINT": "Go to the registration page",
       "EMAIL": "Email",
       "EMAIL_HINT": "The email address you used to register",
-      "EMAIL_OBLIGATORY": "The email address is obligatory",
+      "VALID_EMAIL_OBLIGATORY": "A valid email address is obligatory",
       "ERROR": "Error",
       "HAVEN_T_RECEIVED_A_RESET_CODE": "I haven't received the reset code yet",
       "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "If you haven't received your reset code yet, repeat the procedure",
