--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -179,12 +179,12 @@
       "CONFIRM_NEW_PASSWORD": "Conferma la nuova password",
       "CONFIRM_NEW_PASSWORD_HINT": "Conferma la nuova password e continua",
       "CONFIRM_PASSWORD_ERROR": "Utente non trovato, codice non corretto o password troppo corta",
-      "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Per effettuare l'accesso devi prima confermare l'indirizzo email da te indicato; controlla nella tua posta in arrivo o nello SPAM",
+      "CONFIRM_YOUR_EMAIL_TO_LOGIN": "Per effettuare l'accesso devi prima confermare l'indirizzo email da te indicato; controlla nella tua posta in arrivo o nello SPAM.",
       "CREATE_AN_ACCOUNT": "Crea un nuovo account",
       "CREATE_AN_ACCOUNT_HINT": "Vai alla pagina di registrazione",
       "EMAIL": "Email",
       "EMAIL_HINT": "L'indirizzo email che hai usato per registrati",
-      "EMAIL_OBLIGATORY": "L'indirizzo email è obbligatorio",
+      "VALID_EMAIL_OBLIGATORY": "Un indirizzo email valido è obbligatorio",
       "ERROR": "Errore",
       "HAVEN_T_RECEIVED_A_RESET_CODE": "Non ho ricevuto il codice di reset",
       "HAVEN_T_RECEIVED_A_RESET_CODE_HINT": "Ripeti la procedura se non hai ancora ricevuto il codice di reset",
