--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -397,6 +397,10 @@
       "YOU_ARE_OFFLINE": "You are offline"
     },
     "RESOURCE_CENTER": {
+      "SEARCH_FOR_FOLDERS": "Filter your Resource Center's folders",
+      "CREATE_NEW_FOLDER": "Create a new folder",
+      "SELECT_FOLDER_NAME": "Select a name for the folder.",
+      "NAME_MUST_BE_UNIQUE_IN_RC": "The name has to be unique in the Resource Center.",
       "ERROR_OPENING_RESOURCE": "Error while opening the resource",
       "NO_FOLDER_SELECTED": "No folder selected",
       "NO_NAME": "No name",
@@ -406,7 +410,33 @@
       "RESOURCES_AVAILABLE": "Resources available",
       "SELECT_FOLDER": "Select a folder",
       "TAP_TO_ADD_A_RESOURCE": "Tap to add a resource...",
-      "VERSION_ATTACHED_IS_OLDER": "The resource has been updated since it was attached"
+      "VERSION_ATTACHED_IS_OLDER": "The resource has been updated since it was attached",
+      "COULDNT_LOAD_LIST": "Couldn't load the list",
+      "RENAME": "Rename",
+      "DELETE": "Delete",
+      "NAME": "Name",
+      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "A folder with this name already exists",
+      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "You will lose every file contained in the folder.",
+      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filter resources contained in '{{folder}}'",
+      "UPLOAD_NEW_RESOURCES": "Upload new resources in this folder",
+      "ACTIONS_ON_THE_RESOURCE": "Actions on the resource",
+      "OPEN_RESOURCE": "Open the current version of the resource",
+      "LASTLY_UPDATED_X_AGO": "Lastly updated {{time}}",
+      "UPLOAD_NEW_VERSION": "Upload a new version",
+      "ACTIONS_ON_RESOURCE": "Actions on the resource",
+      "RENAME_FOLDER": "Rename folder",
+      "RENAME_RESOURCE": "Rename resource",
+      "SELECT_RESOURCE_NAME": "Select a name for the resource.",
+      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "The name has to be unique in the folder.",
+      "RESOURCE_WITH_SAME_NAME_ALREADY_EXISTS": "A resource with this name already exists",
+      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "One or more file upload failed",
+      "THE_FOLLOWING_FILES_FAILED_UPLOAD": "The following files failed to upload",
+      "UPLOAD_COMPLETED": "Upload completed",
+      "UPLOAD_FAILED": "Upload failed",
+      "INVALID_FORMAT_FILE_": "{{name}}: format not allowed (only: jpg, jpeg, png, pdf).",
+      "INVALID_SIZE_FILE_": "{{name}}: file is too big (max 10 MB).",
+      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: error creating the resource.",
+      "UPLOAD_ERROR_FILE": "{{name}}: error uploading the file."
     },
     "SELECT": {
       "CLEAR_SELECTION": "Clear selection",
