--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -397,6 +397,10 @@
       "YOU_ARE_OFFLINE": "Sei offline"
     },
     "RESOURCE_CENTER": {
+      "SEARCH_FOR_FOLDERS": "Filtra le cartelle del tuo Resource Center",
+      "CREATE_NEW_FOLDER": "Crea una nuova cartella",
+      "SELECT_FOLDER_NAME": "Scegli un nome per la cartella.",
+      "NAME_MUST_BE_UNIQUE_IN_RC": "Il nome deve essere unico nel Resource Center.",
       "ERROR_OPENING_RESOURCE": "Errore durante l'apertura della risorsa",
       "NO_FOLDER_SELECTED": "Nessuna cartella selezionata",
       "NO_NAME": "Senza nome",
@@ -406,7 +410,33 @@
       "RESOURCES_AVAILABLE": "Risorse disponibili",
       "SELECT_FOLDER": "Seleziona una cartella",
       "TAP_TO_ADD_A_RESOURCE": "Tocca per aggiungere una risorsa...",
-      "VERSION_ATTACHED_IS_OLDER": "La risorsa è stata aggiornata da quando è stata allegata"
+      "VERSION_ATTACHED_IS_OLDER": "La risorsa è stata aggiornata da quando è stata allegata",
+      "COULDNT_LOAD_LIST": "Errore nel caricamento della lista",
+      "RENAME": "Rinomina",
+      "DELETE": "Elimina",
+      "NAME": "Nome",
+      "FOLDER_WITH_SAME_NAME_ALREADY_EXISTS": "È già presente una cartella con questo nome",
+      "YOU_WILL_USE_ALL_FILES_IN_FOLDER": "Perderai tutti i file contenuti nella cartella.",
+      "SEARCH_FOR_RESOURCES_OF_FOLDER_": "Filtra le risorse contenute in '{{folder}}'",
+      "UPLOAD_NEW_RESOURCES": "Carica nuove risorse in questa cartella",
+      "ACTIONS_ON_THE_RESOURCE": "Azioni sulla risorsa",
+      "OPEN_RESOURCE": "Apri la versione corrente della risorsa",
+      "LASTLY_UPDATED_X_AGO": "Aggiornato {{time}}",
+      "UPLOAD_NEW_VERSION": "Carica una nuova versione",
+      "ACTIONS_ON_RESOURCE": "Azioni sulla risorsa",
+      "RENAME_FOLDER": "Rinomina cartella",
+      "RENAME_RESOURCE": "Rinomina risorsa",
+      "SELECT_RESOURCE_NAME": "Scegli un nome per la risorsa.",
+      "NAME_MUST_BE_UNIQUE_IN_FOLDER": "Il nome deve essere univoco nella cartella.",
+      "RESOURCE_WITH_SAME_NAME_ALREADY_EXISTS": "È già presente una risorsa con questo nome",
+      "ONE_OR_MORE_FILE_UPLOAD_FAILED": "Uno o più caricamenti dei file è fallito",
+      "THE_FOLLOWING_FILES_FAILED_UPLOAD": "I seguenti file hanno fallito il caricamento",
+      "UPLOAD_COMPLETED": "Caricamento completato",
+      "UPLOAD_FAILED": "Caricamento fallito",
+      "INVALID_FORMAT_FILE_": "{{name}}: formato non permesso (solo: jpg, jpeg, png, pdf).",
+      "INVALID_SIZE_FILE_": "{{name}}: file troppo grande (max 10 MB).",
+      "ERROR_CREATING_RESOURCE_FILE": "{{name}}: errore nella creazione della risorsa.",
+      "UPLOAD_ERROR_FILE": "{{name}}: errore nel caricamento del file."
     },
     "SELECT": {
       "CLEAR_SELECTION": "Svuota selezione",
